<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="0.0"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toTopOf="parent"
        android:clipToOutline="true"
        android:clipToPadding="true"
        android:clipChildren="true"
        android:padding="16dp"
        android:orientation="vertical"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:paddingStart="12dp"
            android:paddingEnd="18dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="false"
                android:importantForAccessibility="no"
                android:layout_width="match_parent"
                android:gravity="center|start"
                android:textSize="18sp"
                android:textStyle="normal"
                android:text="@string/change_wallpaper"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:clickable="false"
                    android:longClickable="false"
                    android:scaleType="fitCenter"
                    android:importantForAccessibility="no"
                    android:layout_width="32dp"
                    android:layout_height="32dp"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="14dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="false"
                android:importantForAccessibility="no"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:textStyle="normal"
                android:text="@string/transparent_wallpaper"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:longClickable="false"
                    android:importantForAccessibility="no"
                    android:layout_width="wrap_content"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/apply"
                    android:layout_height="32dp"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:visibility="visible"
            android:layout_marginTop="14dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_weight="2"
                android:clickable="false"
                android:importantForAccessibility="no"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:textStyle="normal"
                android:textColor="?attr/colorControlNormal"
                android:text="@string/background_dim"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_gravity="center"
                android:gravity="center|end"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="0dp"
                    android:layout_height="32dp"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:visibility="visible"
            android:layout_marginTop="14dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_weight="2"
                android:clickable="false"
                android:importantForAccessibility="no"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:textStyle="normal"
                android:textColor="?attr/colorControlNormal"
                android:text="@string/top_bar_dim"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_gravity="center"
                android:gravity="center|end"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <View
                    android:layout_width="0dp"
                    android:layout_height="32dp"/>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="14dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="false"
                android:importantForAccessibility="no"
                android:layout_width="match_parent"
                android:textSize="18sp"
                android:textStyle="normal"
                android:text="@string/reset_cache"
                android:layout_height="wrap_content"/>
            <RelativeLayout
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:longClickable="false"
                    android:importantForAccessibility="no"
                    android:contentDescription="@string/reset_cache"
                    android:layout_width="wrap_content"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:text="@string/clear"
                    android:layout_height="32dp"/>
            </RelativeLayout>
        </LinearLayout>
        <TextView
            android:layout_marginTop="16dp"
            android:clickable="false"
            android:importantForAccessibility="no"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textSize="11sp"
            android:textStyle="normal"
            android:text="@string/long_click_anywhere_above_to_collabs_settings_areia"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>